# mcns_website

./: .gitignore  404.html  README.md  build_pages.py  clear_build.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  upload_thumbnails.sh
.github/workflows/: ci.yml
build_tools/: building.py  env.py  loading.py
cite/: index.html
docs/: cite.md  download.md  index.md  media.md
docs/explore/: index.md
docs/stylesheets/: extra.css
download/: index.html
explore/: index.html
search/: search_index.json
templates/: dimorphism_individual.md  dimorphism_overview.md  female_spec_individual.md  hemilineage_individual.md  isomorphism_individual.md  male_spec_individual.md  supertype_individual.md  synonym_individual.md
