[project]
name = "mcns-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "cocoa",
    "d3blocks>=1.4.11",
    "jinja2>=3.1.6",
    "mkdocs-material>=9.6.11",
    "navis",
    "neuprint-python>=0.5.1",
    "nglscenes",
    "numpy~=1.26",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
navis = { git = "https://github.com/navis-org/navis", rev = "master" }
nglscenes = { git = "https://github.com/schlegelp/nglscenes", rev = "main" }
cocoa = { git = "https://github.com/flyconnectome/cocoa.git" }
