[project]
name = "mcns-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "cocoa",
    "d3graph>=2.5.0",
    "dvidtools>=0.5.0",
    "jinja2>=3.1.6",
    "mkdocs-material>=9.6.11",
    "navis",
    "neuprint-python>=0.5.1",
    "nglscenes",
    "numpy~=1.26",
    "octarine-navis-plugin>=0.1.2",
    "octarine3d",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
]

[tool.uv.sources]
navis = { git = "https://github.com/navis-org/navis", rev = "master" }
nglscenes = { git = "https://github.com/schlegelp/nglscenes", rev = "main" }
cocoa = { git = "https://github.com/flyconnectome/cocoa", rev = "models" }
dvidtools = { git = "https://github.com/flyconnectome/dvid_tools", rev = "master" }
octarine3d = { git = "https://github.com/schlegelp/octarine" }
